--- a/src/chat.scss
+++ b/src/chat.scss
@@ -97,6 +97,7 @@ $chatHeaderSize: 26px;
 
                 table {
                   position: absolute !important;
+                  background: $deepgray !important;
 
                   input.text {
                     border: none !important;
