--- a/src/main.scss
+++ b/src/main.scss
@@ -62,7 +62,7 @@
 @import "race";
 @import "./forum/forum";
 @import "chatlogs";
-@import "./chat/chat";
+@import "chat";
 @import "./stats/stats";
 @import "toplist";
 @import "search";
